# my_pad_ds_project

./: .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  HomeWork.txt  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  test_environment.py
docs/: Makefile  conf.py  index.rst  make.bat
scripts/: build_features.py  minio_down.bat  minio_up.bat  run_pipeline.bat  s3_pipeline.py  s3_utils.py  test_script.py  upload_raw.bat  upload_raw.py
src/: my_module.py  utils.py
src/data/: make_dataset.py
